<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="407dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:background="@drawable/back"
                android:src="@drawable/mylogo"
                tools:ignore="ContentDescription" />

            <!-- Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_up_for_free"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Username Input -->
            <LinearLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/usernameIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_user"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/inputUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/username"
                    android:minHeight="48dp"
                    android:inputType="textPersonName"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Email Input -->
            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/usernameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_email"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Password Input -->
            <LinearLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/emailLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/passwordIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_key" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/showPassword"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_eye_off" />
            </LinearLayout>

            <!-- RadioButtons -->
            <RadioButton
                android:id="@+id/keepSignedIn"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/keep_me_signed_in"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/specialPricing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_me_about_special_pricing"
                android:textColor="@color/black" />

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="141dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/main"
                android:text="@string/sing_up1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <!-- Already Have Account -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/haveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:minHeight="48dp"
                    android:focusable="true"
                    android:textStyle="bold"
                    android:textColor="@color/main"
                    android:text="@string/already_have_an_account" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
